--- a/Index.html
+++ b/Index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Dennis Title</title>
+<title>Jos Title</title>
 </head>
 <body>
 
-<h1>This is Dennis Heading</h1>
-<p>This is Dennis Paragraph.</p>
+<h1>This is Jos Heading</h1>
+<p>This is Jos Paragraph.</p>
 
 </body>
 </html>
